Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-20168

Start debugging with Attach to QML Port: Gives popup "Internal error: Unsupported start mode 7."

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 4.7.1
    • Qt Creator 4.5.1, Qt Creator 4.7.0
    • None
    • ab1c723ad0fb428ce365ab2392e0b

      Starting a QML debugging session using "Attach to QML Port" will fail with a popup saying "Internal error: Unsupported start mode 7."

      I can start debugging using QtCreator 4.4.1 (from Qt 5.9.3-msvs2015-x86 on Windows 10) even if my application is built with Qt 5.10.1-msvs2015-x86

      Console output from our application shows "QML debugging is enabled. Only use this in a safe environment." where we are using port 62090.

      Output in QtCreator when trying to start QML debug session:
       

      Starting debugger "QmlCppEngine" for ABI "x86-windows-msvc2015-pe-32bit"...
       Start parameters: '' mode: 7
       ABI: x86-windows-msvc2015-pe-32bit
       Languages: qml
       Debugger: C:\Program Files (x86)\Windows Kits\10\Debuggers\x86\cdb.exe
       Remote: :0
       QML server: localhost:62090
       Sysroot:
       Debug Source Location:
       Debugger settings:
       AdditionalArguments: (default: )
       AdjustBreakpointLocations: true (default: true)
       AllPluginBreakpoints: true (default: true)
       AlwaysAdjustColumnWidths: true (default: true)
       AutoDerefPointers: true (default: true)
       AutoEnrichParameters: true (default: true)
       AutoQuit: false (default: false)
       BreakEvent: (default: )
       BreakOnAbort: false (default: false)
       BreakOnCatch: false (default: false)
       BreakOnCrtDbgReport: false (default: false)
       BreakOnFatal: false (default: false)
       BreakOnThrow: false (default: false)
       BreakOnWarning: false (default: false)
       BreakpointCorrection: true (default: true)
       BreakpointsFullPath: false (default: false)
       CDB_Console: false (default: false)
       CloseBuffersOnExit: false (default: false)
       CloseMemoryBuffersOnExit: true (default: true)
       DisplayStringLimit: 100 (default: 100)
       EnableReverseDebugging: false (default: false)
       ExtraDumperFile: (default: )
       FontSizeFollowsEditor: false (default: false)
       GdbCustomDumperCommands: (default: )
       GdbPostAttachCommands: (default: )
       GdbStartupCommands: (default: )
       IdentifyDebugInfoPackages: false (default: false)
       IgnoreFirstChanceAccessViolation: false (default: false)
       IntelFlavor: false (default: false)
       LoadGdbDumpers2: false (default: false)
       LoadGdbInit: true (default: true)
       LogTimeStamps: false (default: false)
       MaximalStackDepth: 20 (default: 20)
       MaximalStringLength: 10000 (default: 10000)
       MultiInferior: false (default: false)
       NoPluginBreakpoints: false (default: false)
       QmlInspector.ShowAppOnTop: true (default: false) ***
       RaiseOnInterrupt: true (default: true)
       RegisterForPostMortem: false (default: false)
       SelectedPluginBreakpoints: false (default: false)
       SelectedPluginBreakpointsPattern: .* (default: .*)
       ShowQObjectNames2: true (default: true)
       ShowQmlObjectTree: true (default: true)
       ShowQtNamespace: true (default: true)
       ShowStandardNamespace: true (default: true)
       ShowThreadNames: false (default: false)
       SkipKnownFrames: false (default: false)
       SortStructMembers: true (default: true)
       SourcePaths: (default: )
       StationaryEditorWhileStepping: false (default: false)
       SwitchModeOnExit: false (default: false)
       SymbolPaths: (default: )
       TargetAsync: false (default: false)
       UseAddressInBreakpointsView: false (default: false)
       UseAddressInStackView: false (default: false)
       UseAlternatingRowColours: false (default: false)
       UseCodeModel: true (default: true)
       UseDebuggingHelper: true (default: true)
       UseDynamicType: true (default: true)
       UseMessageBoxForSignals: true (default: true)
       UsePythonDumper: true (default: true)
       UseToolTips: true (default: true)
       UseToolTipsInBreakpointsView: true (default: false) ***
       UseToolTipsInBreakpointsView: true (default: true)
       UseToolTipsInLocalsView: true (default: false) ***
       WarnOnReleaseBuilds: true (default: true)
       WatchdogTimeout: 20 (default: 20)
       State changed from DebuggerNotReady(0) to EngineSetupRequested(1) [master]
       CALL: SETUP ENGINE
       State changed from DebuggerNotReady(0) to EngineSetupRequested(1)
       CALL: SETUP SLAVE ENGINE
       NOTE: ENGINE SETUP OK
       State changed from EngineSetupRequested(1) to EngineSetupOk(3)
       CALL: SETUP INFERIOR
       State changed from DebuggerNotReady(0) to EngineSetupRequested(1)
       CALL: SETUP SLAVE ENGINE
       ERROR: Internal error: Unsupported start mode 7.
       NOTE: ENGINE SETUP FAILED
       State changed from EngineSetupRequested(1) to EngineSetupFailed(2)
       NOTE: ENGINE SETUP FAILED
       State changed from EngineSetupRequested(1) to EngineSetupFailed(2) [master]
       <Debugging has failed
       State changed from EngineSetupFailed(2) to DebuggerFinished(22) [master]
       State changed from EngineSetupFailed(2) to DebuggerFinished(22)
       QUIT DEBUGGER REQUESTED IN STATE 22
      

       

        1. screenshot-1.png
          screenshot-1.png
          28 kB
        2. screenshot-2.png
          screenshot-2.png
          19 kB
        3. screenshot-3.png
          screenshot-3.png
          3 kB
        For Gerrit Dashboard: QTCREATORBUG-20168
        # Subject Branch Project Status CR V

            hjk hjk
            sigfredhaversen Sigfred Håversen
            Votes:
            5 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes